--- a/index.html
+++ b/index.html
@@ -7,7 +7,17 @@
 </head>
 <body>
     <h1>Sahar Mollah</h1>
-
+    <h2>All About Me</h2>
+    <p>Hey, my name is Sahar and I am a sophomore at Staten Island Tech! Some of my hobies include running, drawing, reading, and listening to music. I also like watching anime as well as spending hours on end reading manga until it's 3am and I still (STILL) havent finished my russian homework. I am currently on the SITHS soccer and dance club and will be doing track and field for the winter and spring seasons. </p>
+    <h2>My Favorite Shows</h2>
+    <p> Some of my favorite animes are :</p>
+    <ol>
+        <li>Banana Fish</li>
+        <li>Given</li>
+        <li>Fruits Basket</li>
+        <li>Ouran Highschool Host Club</li>
+        <li>Death Note</li>
+    </ol>
 
 </body>
 </html>
