--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
         <li>Ouran Highschool Host Club</li>
         <li>Death Note</li>
     </ol>
+<a href="https://open.spotify.com/user/bi0n0ewm6m5f6w0ccn0p11gb7?si=g2h3WD2CQ3uaoJIm7zHpyg">click for the most elite music taste</a>
 
 </body>
 </html>
