--- a/index.html
+++ b/index.html
@@ -16,14 +16,9 @@
         <li>Given</li>
         <li>Fruits Basket</li>
         <li>Ouran Highschool Host Club</li>
-        <li>Death te</li>
+        <li>Death Note</li>
     </ol>
-<<<<<<< Updated upstream
-<a href="https://open.spotify.com/user/bi0n0ewm6m5f6w0ccn0p11gb7?si=g2h3WD2CQ3uaoJIm7zHpyg">click for the most elite music taste</a>
 
-</body>
-</html>
-=======
     <h2>My Favorite Songs</h2>
     <ul>
  <li>I Wanna Be Yours</li>
